testsuite/gnatprove/tests/1259__c_strings/test.out
test.adb:5:13: error: launch "gnatprove --explain=E0006" for more information
test.adb:5:13: error: nonvolatile function "F" with volatile input global "C_Addresses" is not allowed in SPARK (SPARK RM 7.1.3(7)) [E0006]
test.adb:5:13: error: violation of aspect SPARK_Mode at line 3
test.adb:11:21: error: "F" is not allowed in SPARK (due to nonvolatile function with volatile global inputs)
test.adb:11:21: error: violation of aspect SPARK_Mode at line 3
test.adb:12:21: error: "F" is not allowed in SPARK (due to nonvolatile function with volatile global inputs)
test.adb:12:21: error: violation of aspect SPARK_Mode at line 3
test.adb:14:19: error: "X" is not allowed in SPARK (due to nonvolatile function with volatile global inputs)
test.adb:14:19: error: violation of aspect SPARK_Mode at line 3
test.adb:14:23: error: "Y" is not allowed in SPARK (due to nonvolatile function with volatile global inputs)
test.adb:14:23: error: violation of aspect SPARK_Mode at line 3
gnatprove: error during flow analysis and proof
